fix(switch): fixed switch color in dark and high contrast modes.

--- a/app/assets/css/bootstrap-override.css
+++ b/app/assets/css/bootstrap-override.css
@@ -68,6 +68,8 @@
 
 .switch input[type='checkbox']:disabled + .slider {
   background-color: var(--ui-gray-3);
+  @apply th-dark:before:bg-gray-warm-8;
+  @apply th-highcontrast:before:bg-gray-warm-8;
   @apply th-dark:bg-gray-warm-9;
   @apply th-highcontrast:bg-gray-warm-9;
 }
@@ -90,6 +92,8 @@
   background-color: var(--bg-switch-box-color);
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  @apply th-dark:bg-gray-warm-9;
+  @apply th-highcontrast:bg-gray-warm-9;
 }
 
 .slider:before {
